# function-kubecore-schema

./: .gitignore  BIDIRECTIONAL_DISCOVERY_SUMMARY.md  CHANGELOG.md  EVALUATION_PROMPT.md  FINAL_TRANSITIVE_DISCOVERY_DEMONSTRATION.md  PHASE4_FINAL_EVALUATION_REPORT.md  README.md  TRANSITIVE_DISCOVERY_ANALYSIS.md  TRANSITIVE_DISCOVERY_DEMO_RESULTS.md  TRANSITIVE_DISCOVERY_IMPLEMENTATION.md  benchmark_phase2.py  bidirectional-test-composition.yaml  debug-transitive-discovery.py  final_validation.py  phase2_benchmark_results.json  pyproject.toml  simple-transitive-test.yaml  simple_transitive_validation.py  simple_validation.py  test-claims.yaml  test-composition.yaml  test-local-with-k8s.py  test-resources.yaml  test-transitive-discovery-directly.py  test-transitive-fix-claim.yaml  test-transitive-fix.yaml  test_context_extraction.py  transitive-discovery-test-claim.yaml  transitive-discovery-test-composition.yaml  transitive-enabled-test.yaml  transitive_discovery_validation.py  validate_phase1.py  validate_phase3.py  validate_phase4.py  working-test-claim.yaml  working-transitive-test.yaml
.claude/: prompt.md  testing-guide.md
.cursor/: prompt.md
.kilocode/: mcp.json
docs/: README.md  USER_GUIDE.md
example/: README.md  composition.yaml  functions.yaml
function/: __init__.py  __version__.py  cache.py  fn.py  insights_engine.py  k8s_client.py  main.py  performance.py  platform_relationships.py  query_processor.py  resource_resolver.py  resource_summarizer.py  response_generator.py  schema_registry.py  transitive_discovery.py
manifests/: function.yaml
package/: crossplane.yaml
package/input/: context.fn.kubecore.io_inputs.yaml  template.fn.crossplane.io_inputs.yaml
prd/: CONTEXT_FUNCTION_VALIDATION.md  KUBECORE_CONTEXT_FUNCTION_SPECIFICATION.md  PHASE1_EVALUATION_REPORT.md  PHASE2_VALIDATION_REPORT.md  PHASE3_EVALUATION_REPORT.md  phase4_final_validation.json  phase4_validation_results.json  test_phase4_components.py  validate_phase1.py  validate_simple.py
schemas/: input.yaml  output.yaml
tests/: test_fn.py  test_integration.py  test_kubecore_function.py  test_performance.py  test_query_processor.py  test_schema_registry.py  test_transitive_discovery.py
